Fixed relic loading method